--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
         "jest": "^25.5.4",
         "lint-staged": "^10.2.2",
         "prettier": "^1.19.1",
-        "react": "link:../ora-frontend/node_modules/react",
-        "react-dom": "link:../ora-frontend/node_modules/react-dom",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "react-is": "^16.13.1",
         "rollup": "^2.7.6",
         "rollup-plugin-babel": "^4.4.0",
