--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
         "dist"
     ],
     "dependencies": {
-        "@react-spring/web": "npm:@tim-soft/react-spring-web@9.0.0-beta.36",
+        "react-spring": "^9.0.0-rc.3",
         "react-use-gesture": "7.0.15"
     }
 }
