--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,6 @@
     "license": "MIT",
     "private": true,
     "dependencies": {
-        "@react-spring/web": "link:../node_modules/@react-spring/web",
         "color": "^3.1.2",
         "lodash.clamp": "^4.0.3",
         "lodash.merge": "^4.6.2",
@@ -16,6 +15,7 @@
         "react-icons": "^3.9.0",
         "react-is": "link:../node_modules/react-is",
         "react-photo-gallery": "^8.0.0",
+        "react-spring": "^9.0.0-rc.3",
         "react-spring-lightbox": "link:..",
         "styled-components": "link:../node_modules/styled-components",
         "styled-normalize": "^8.0.7"
