--- a/example/package.json
+++ b/example/package.json
@@ -10,14 +10,14 @@
         "lodash.merge": "^4.6.2",
         "next": "^9.3.4",
         "prop-types": "^15.6.2",
-        "react": "link:../node_modules/react",
-        "react-dom": "link:../node_modules/react-dom",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
         "react-icons": "^3.9.0",
-        "react-is": "link:../node_modules/react-is",
+        "react-is": "^16.13.1",
         "react-photo-gallery": "^8.0.0",
         "react-spring": "^9.0.0-rc.3",
         "react-spring-lightbox": "link:..",
-        "styled-components": "link:../node_modules/styled-components",
+        "styled-components": "^5.0.1",
         "styled-normalize": "^8.0.7"
     },
     "scripts": {
